--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   auto_size_text: ^2.1.0
   percent_indicator: ^2.1.5
+  flutter_launcher_icons: ^0.7.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "appicon/consultancylogo.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,7 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/consultancylogo.png
+    - images/consultancylogo.jpg
     - images/invisiblepassword.jpg
     - images/itlogo.jpg
     - images/taxImage.png
