--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   auto_size_text: ^2.1.0
   percent_indicator: ^2.1.5
   flutter_launcher_icons: ^0.7.5
+  mask_text_input_formatter: ^1.1.0
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
