--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
   mask_text_input_formatter: ^1.1.0
   http: ^0.12.2
+  firebase_auth: ^0.15.3
+  fluttertoast: ^7.0.4
+  shared_preferences: ^0.5.3+4
 
 dev_dependencies:
   flutter_test:
