--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^0.15.3
   fluttertoast: ^7.0.4
   shared_preferences: ^0.5.3+4
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
