--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^7.0.4
   shared_preferences: ^0.5.3+4
   flutter_spinkit: ^4.1.2+1
+  page_transition: ^1.1.7+2
 
 dev_dependencies:
   flutter_test:
